test/asm/builtin-reserved.asm
ASSERT !DEF(_NARG)

PURGE _NARG

DEF _NARG EQU 12
REDEF _NARG EQU 34

DEF _NARG = 56
REDEF _NARG = 78

DEF _NARG EQUS "hello"
REDEF _NARG EQUS "world"

SECTION "test", ROM0
_NARG:
